--- a/lib/algora_web/components/layouts/root.html.heex
+++ b/lib/algora_web/components/layouts/root.html.heex
@@ -100,8 +100,24 @@
             class="group outline-none w-fit"
             target="_blank"
             rel="noopener noreferrer"
-            href="https://algora.io/discord"
+            href="https://www.youtube.com/@algora-io"
           >
+            <div class="text-center font-sans justify-center items-center shrink-0 transition duration-150 select-none group-focus:outline-none group-disabled:opacity-75 group-disabled:pointer-events-none bg-transparent hover:bg-slate-850 disabled:opacity-50 h-8 px-2 text-sm font-semibold rounded-[3px] hidden whitespace-nowrap lg:flex">
+              <div class="justify-center flex w-full items-center gap-x-1">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="h-5 text-gray-300 transition mr-0.5 shrink-0 justify-start"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M18 3a5 5 0 0 1 5 5v8a5 5 0 0 1 -5 5h-12a5 5 0 0 1 -5 -5v-8a5 5 0 0 1 5 -5zm-9 6v6a1 1 0 0 0 1.514 .857l5 -3a1 1 0 0 0 0 -1.714l-5 -3a1 1 0 0 0 -1.514 .857z" />
+                </svg>
+              </div>
+            </div>
+          </a>
+          <a class="group outline-none w-fit" target="_blank" href="https://algora.io/discord">
             <div class="text-center font-sans justify-center items-center shrink-0 transition duration-150 select-none group-focus:outline-none group-disabled:opacity-75 group-disabled:pointer-events-none bg-transparent hover:bg-slate-850 disabled:opacity-50 h-8 px-2 text-sm font-semibold rounded-[3px] hidden whitespace-nowrap lg:flex">
               <div class="justify-center flex w-full items-center gap-x-1">
                 <svg
@@ -129,7 +145,7 @@
             <div class="text-center font-sans justify-center items-center shrink-0 transition duration-150 select-none group-focus:outline-none group-disabled:opacity-75 group-disabled:pointer-events-none bg-transparent hover:bg-slate-850 disabled:opacity-50 h-8 text-sm font-semibold rounded-[3px] hidden whitespace-nowrap p-2 lg:flex">
               <div class="justify-center flex w-full items-center gap-x-1">
                 <svg
-                  class="h-4 text-bright transition group-disabled:text-dimmed/80 mr-0.5 shrink-0 justify-start"
+                  class="h-5 text-gray-300 transition mr-0.5 shrink-0 justify-start"
                   viewBox="0 0 24 24"
                   fill="currentColor"
                   xmlns="http://www.w3.org/2000/svg"
@@ -150,9 +166,16 @@
                   </defs>
                 </svg>
                 <span class="hidden xl:block">Star</span>
-                <span class="font-normal">22</span>
+                <span class="font-semibold text-gray-300">22</span>
               </div>
             </div>
+          </a>
+          <a
+            target="_blank"
+            href="https://tv.algora.io/zaf/8434"
+            class="px-4 py-2 lg:flex hidden whitespace-nowrap"
+          >
+            <span class="relative font-semibold text-sm">How to livestream</span>
           </a>
           <%= if @current_user do %>
             <div class="shrink-0">
