--- a/lib/algora_web/components/layouts/root_embed.html.heex
+++ b/lib/algora_web/components/layouts/root_embed.html.heex
@@ -14,13 +14,16 @@
       <meta name="description" content={assigns[:channel_tagline]} />
       <meta
         name="twitter:image:src"
-        content={"#{AlgoraWeb.Endpoint.url()}/images/og/default.png"}
+        content={assigns[:page_image] || "#{AlgoraWeb.Endpoint.url()}/images/og/default.png"}
       />
       <meta name="twitter:site" content="@algoraio" />
       <meta name="twitter:card" content="summary_large_image" />
       <meta name="twitter:title" content={"#{assigns[:channel_name]} | Algora TV"} />
       <meta name="twitter:description" content={assigns[:channel_tagline]} />
-      <meta property="og:image" content={"#{AlgoraWeb.Endpoint.url()}/images/og/default.png"} />
+      <meta
+        property="og:image"
+        content={assigns[:page_image] || "#{AlgoraWeb.Endpoint.url()}/images/og/default.png"}
+      />
       <meta property="og:image:width" content="1200" />
       <meta property="og:image:height" content="630" />
       <meta property="og:site_name" content="Algora TV" />
