fix some routes

--- a/lib/algora_web/live/show_live/index.html.heex
+++ b/lib/algora_web/live/show_live/index.html.heex
@@ -1,7 +1,7 @@
 <.header>
   Listing Shows
   <:actions>
-    <.link patch={~p"/shows/new"}>
+    <.link patch={~p"/admin/shows/new"}>
       <.button>New Show</.button>
     </.link>
   </:actions>
@@ -10,7 +10,7 @@
 <.table
   id="shows"
   rows={@streams.shows}
-  row_click={fn {_id, show} -> JS.navigate(~p"/shows/#{show}") end}
+  row_click={fn {_id, show} -> JS.navigate(~p"/shows/#{show.slug}") end}
 >
   <:col :let={{_id, show}} label="Title"><%= show.title %></:col>
   <:col :let={{_id, show}} label="Slug"><%= show.slug %></:col>
@@ -18,7 +18,7 @@
   <:col :let={{_id, show}} label="Image url"><%= show.image_url %></:col>
   <:action :let={{_id, show}}>
     <div class="sr-only">
-      <.link navigate={~p"/shows/#{show}"}>Show</.link>
+      <.link navigate={~p"/shows/#{show.slug}"}>Show</.link>
     </div>
     <.link patch={~p"/shows/#{show}/edit"}>Edit</.link>
   </:action>
@@ -32,13 +32,18 @@
   </:action>
 </.table>
 
-<.modal :if={@live_action in [:new, :edit]} id="show-modal" show on_cancel={JS.patch(~p"/shows")}>
+<.modal
+  :if={@live_action in [:new, :edit]}
+  id="show-modal"
+  show
+  on_cancel={JS.patch(~p"/admin/shows")}
+>
   <.live_component
     module={AlgoraWeb.ShowLive.FormComponent}
     id={@show.id || :new}
     title={@page_title}
     action={@live_action}
     show={@show}
-    patch={~p"/shows"}
+    patch={~p"/admin/shows"}
   />
 </.modal>
