link to /docs/streaming/quickstart

--- a/lib/algora_web/components/layouts/live.html.heex
+++ b/lib/algora_web/components/layouts/live.html.heex
@@ -72,7 +72,7 @@
         <p class="font-sans font-semibold text-xs uppercase tracking-wider mb-2 px-3 text-gray-400">
           Resources
         </p>
-        <a class="group outline-none w-full" target="_blank" href="https://tv.algora.io/zaf/8434">
+        <.link class="group outline-none w-full" target="_blank" href="/docs/streaming/quickstart">
           <div class="flex text-center font-sans justify-center items-center shrink-0 duration-150 select-none group-focus:outline-none group-disabled:opacity-75 group-disabled:pointer-events-none p-2 w-full gap-2 rounded-sm bg-transparent group-hover:bg-gray-800 buttonSize iconSize fontSize text-gray-400 group-hover:text-gray-300 px-3 -ml-1 border-b border-gray-800 transition hover:bg-gray-800">
             <div class="text-left flex w-full items-center gap-x-1">
               <div class="group mr-1 rounded border border-gray-900 bg-gray-900/40 p-1.5 group-hover:bg-gray-950">
@@ -110,7 +110,7 @@
               </svg>
             </div>
           </div>
-        </a>
+        </.link>
       </div>
 
       <div class="text-white mt-1 flex origin-top flex-col overflow-y-auto pt-4 text-lg focus:outline-none focus:ring-0">
