--- a/lib/algora_web/components/layouts/root.html.heex
+++ b/lib/algora_web/components/layouts/root.html.heex
@@ -179,13 +179,13 @@
               </div>
             </div>
           </a>
-          <a
-            target="_blank"
-            href="https://tv.algora.io/zaf/8434"
+          <.link
             class="px-4 py-2 lg:flex hidden whitespace-nowrap"
+            target="_blank"
+            href="/docs/streaming/quickstart"
           >
             <span class="relative font-semibold text-sm">How to livestream</span>
-          </a>
+          </.link>
           <%= if @current_user do %>
             <div class="shrink-0">
               <.simple_dropdown id="navbar-account-dropdown">
