--- a/lib/algora_web/components/layouts/root.html.heex
+++ b/lib/algora_web/components/layouts/root.html.heex
@@ -191,6 +191,8 @@
               <.simple_dropdown id="navbar-account-dropdown">
                 <:img src={@current_user.avatar_url} alt={@current_user.handle} />
                 <:link navigate={channel_path(@current_user)}>Channel</:link>
+                <:link navigate={~p"/channel/studio"}>Studio</:link>
+                <:link navigate={~p"/subscriptions"}>Subscriptions</:link>
                 <:link navigate={~p"/channel/settings"}>Settings</:link>
                 <:link href={~p"/auth/logout"} method={:delete}>Sign out</:link>
               </.simple_dropdown>
