--- a/lib/algora_web/components/layouts/root_embed.html.heex
+++ b/lib/algora_web/components/layouts/root_embed.html.heex
@@ -28,13 +28,11 @@
       <meta property="og:description" content={Algora.config([:description])} />
     <% end %>
 
-    <%= if assigns[:page_image] do %>
-      <meta name="twitter:image:src" content={assigns[:page_image]} />
-      <meta name="twitter:card" content="summary_large_image" />
-      <meta property="og:image" content={assigns[:page_image]} />
-      <meta property="og:image:width" content="1200" />
-      <meta property="og:image:height" content="630" />
-    <% end %>
+    <meta name="twitter:image:src" content={assigns[:page_image] || ~p"/images/og/home.png"} />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:image" content={assigns[:page_image] || ~p"/images/og/home.png"} />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <%= if assigns[:page_url] do %>
       <meta property="og:url" content={"#{assigns[:page_url]}"} />
