--- a/lib/algora_web/components/layouts/root.html.heex
+++ b/lib/algora_web/components/layouts/root.html.heex
@@ -28,9 +28,15 @@
       <meta property="og:description" content={Algora.config([:description])} />
     <% end %>
 
-    <meta name="twitter:image:src" content={assigns[:page_image] || ~p"/images/og/home.png"} />
+    <meta
+      name="twitter:image:src"
+      content={assigns[:page_image] || "#{AlgoraWeb.Endpoint.url()}/images/og/home.png"}
+    />
+    <meta
+      property="og:image"
+      content={assigns[:page_image] || "#{AlgoraWeb.Endpoint.url()}/images/og/home.png"}
+    />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="og:image" content={assigns[:page_image] || ~p"/images/og/home.png"} />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
