--- a/lib/algora_web/components/layouts/live.html.heex
+++ b/lib/algora_web/components/layouts/live.html.heex
@@ -305,6 +305,7 @@
     </div>
   </div> --%>
   <.flash flash={@flash} kind={:info} />
+  <.flash flash={@flash} kind={:note} />
   <.flash flash={@flash} kind={:error} />
   <.connection_status>
     Re-establishing connection...
