--- a/lib/algora_web/components/layouts/live_bare.html.heex
+++ b/lib/algora_web/components/layouts/live_bare.html.heex
@@ -1,6 +1,7 @@
 <!-- Main column -->
 <div class="flex flex-col w-0 flex-1 overflow-hidden">
   <.flash flash={@flash} kind={:info} />
+  <.flash flash={@flash} kind={:note} />
   <.flash flash={@flash} kind={:error} />
   <.connection_status>
     Re-establishing connection...
