--- a/lib/algora_web/components/layouts/root_embed.html.heex
+++ b/lib/algora_web/components/layouts/root_embed.html.heex
@@ -54,6 +54,12 @@
     </script>
     <script defer data-domain="tv.algora.io" src="https://plausible.io/js/script.js">
     </script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <%= @inner_content %>
