--- a/lib/algora_web/live/ad_live/index.html.heex
+++ b/lib/algora_web/live/ad_live/index.html.heex
@@ -10,11 +10,14 @@
 <.table id="ads" rows={@streams.ads} row_click={fn {_id, ad} -> JS.navigate(~p"/ads/#{ad}") end}>
   <:col :let={{_id, ad}} label="">
     <a href={ad.website_url} rel="noopener noreferrer" class="flex mb-3 font-medium">
-      <div class="flex justify-between w-[1092px]">
+      <div class="grid grid-cols-3 w-[1092px]">
         <div class="text-base text-gray-200">
           <%= String.replace(ad.website_url, ~r/^https?:\/\//, "") %>
         </div>
-        <div class="flex items-center gap-1 text-base text-gray-300">
+        <div class="mx-auto font-mono text-gray-200">
+          <%= Calendar.strftime(ad.scheduled_for, "%I:%M:%S %p") %>
+        </div>
+        <div class="ml-auto flex items-center gap-1 text-base text-gray-300">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
